; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/extr_tda18271c2dd.c_ReadExtented.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/extr_tda18271c2dd.c_ReadExtented.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tda_state = type { i32, i32 }

@NUM_REGS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tda_state*, i32*)* @ReadExtented to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ReadExtented(%struct.tda_state* %0, i32* %1) #0 {
  %3 = alloca %struct.tda_state*, align 8
  %4 = alloca i32*, align 8
  store %struct.tda_state* %0, %struct.tda_state** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.tda_state*, %struct.tda_state** %3, align 8
  %6 = getelementptr inbounds %struct.tda_state, %struct.tda_state* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.tda_state*, %struct.tda_state** %3, align 8
  %9 = getelementptr inbounds %struct.tda_state, %struct.tda_state* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32*, i32** %4, align 8
  %12 = load i32, i32* @NUM_REGS, align 4
  %13 = call i32 @i2c_readn(i32 %7, i32 %10, i32* %11, i32 %12)
  ret i32 %13
}

declare dso_local i32 @i2c_readn(i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
